--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,11 @@ dependencies {
     // Joda time for dealing with dates
     implementation "joda-time:joda-time:2.10"
 
+    // Video playback
+    implementation 'androidx.media3:media3-exoplayer:1.0.0-alpha03'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.0.0-alpha03'
+    implementation 'androidx.media3:media3-ui:1.0.0-alpha03'
+
     // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
