--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,14 @@ android {
 
 dependencies {
 
+    // Views
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
 
     // KTX
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -90,11 +93,26 @@ dependencies {
     implementation 'androidx.media3:media3-exoplayer-dash:1.0.0-alpha03'
     implementation 'androidx.media3:media3-ui:1.0.0-alpha03'
 
-    // Testing
+    // Testing - General
+    implementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
+
+    debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
+    debugImplementation 'androidx.test:core:1.4.0'
+
+    testImplementation project(path: ':app')
+    androidTestImplementation project(path: ':app')
+
+    // Unit tests
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Instrumented tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2."
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
 
 // Is required for Hilt to allow references to generated code
